--- a/instaScam/Base.lproj/Main.storyboard
+++ b/instaScam/Base.lproj/Main.storyboard
@@ -665,6 +665,7 @@
                         <segue destination="hc6-Mt-PW2" kind="relationship" relationship="viewControllers" id="qWe-LV-fEy"/>
                         <segue destination="sLJ-Al-olj" kind="relationship" relationship="viewControllers" id="BzH-a1-yu2"/>
                         <segue destination="ghQ-4v-auD" kind="relationship" relationship="viewControllers" id="ogr-Pz-F03"/>
+                        <segue destination="n2g-z9-sXB" kind="relationship" relationship="viewControllers" id="g8i-6L-Am0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g7X-EU-XIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1270,6 +1271,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pww-FZ-aCW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2008.5" y="1247"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="cLQ-iL-exT">
+            <objects>
+                <viewController id="n2g-z9-sXB" customClass="FollowViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mNm-Dk-qcz"/>
+                        <viewControllerLayoutGuide type="bottom" id="Eq0-XI-Ma0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H1n-K0-MKv">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="q72-VW-j5M">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellID" rowHeight="68" id="4V2-MT-E6T" customClass="FollowTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4V2-MT-E6T" id="FON-0c-t9B">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
+                                </variation>
+                                <connections>
+                                    <outlet property="dataSource" destination="n2g-z9-sXB" id="UH9-mD-2yt"/>
+                                    <outlet property="delegate" destination="n2g-z9-sXB" id="t4e-s3-nwG"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="q72-VW-j5M"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="q72-VW-j5M"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="xaB-Kc-82j"/>
+                    <connections>
+                        <outlet property="tableView" destination="q72-VW-j5M" id="nzh-GT-8Qv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Or-MB-emI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-352.5" y="1242"/>
         </scene>
         <!--Camera-->
         <scene sceneID="dBO-HM-sPN">
